Delete unused code relate to Bulk cases plus update a lot of tests and PMD issues